# ai-economy-sim

./: .gitignore  PROJECT_PLAN.md  README.md  pyproject.toml  requirements.txt
ai_econ_sim/: __init__.py  config.py  model.py  monte_carlo.py  run.py  sectors.py
ai_econ_sim/agents/: expectations.py  firm.py  worker.py
ai_econ_sim/analysis/: outputs.py  plots.py
ai_econ_sim/calibration/: __init__.py  bea_bls.py
ai_econ_sim/capability/: tasks.py  trajectory.py
ai_econ_sim/macro/: accounting.py  government.py
ai_econ_sim/scenarios/: loader.py  reference.yaml
app/: career_advisor_skill.md  streamlit_app.py
scenarios/: broadly_agentic.yaml  calibrated_baseline.yaml  continued_exponential.yaml  fragmented.yaml  plateau.yaml  transformative.yaml
tests/: test_accounting.py  test_agent_heterogeneity.py  test_calibration.py  test_capability.py  test_cli_and_firm_size.py  test_determinism.py  test_firm.py  test_integration.py  test_monte_carlo.py  test_policy.py  test_sectors.py  test_worker.py
